_sass/resources.scss
section.resources-section {
	& > div {
		text-align: left;
		padding-top: 30px;
		padding-left: 16px;
		padding-right: 16px;
		display: flex;
		align-items: flex-start;
		max-width: $content-width;

		& > aside {
			background-color: $light-grey-background-color;
			border-radius: 6px;
			font-size: 0.9em;
			min-width: 220px;
			margin-bottom: 30px;
			margin-right: 20px;
			position: sticky;
			top: 100px;

			& > ul {
				margin: 10px 0px;

			}

			ul {
				padding: 0px;
				list-style-type: none;
			}

			ul > li {
				padding: 5px 20px;

				&.separator {
					padding: 0px;
					border-top: 1px solid $grey-border-color;
					margin: 5px 0px;
					overflow: hidden;
				}

				&.active > a {
					font-weight: bold;
				}

				&:last-child {
					padding-bottom: 0px;
				}
			}

			& > ul > li > ul > li {
				padding-left: 20px;
			}
		}

		& > article {

			& > h2:first-child {
				margin-top: 0px;
			}

			& > h2 {
				margin-bottom: 0px;
				padding-bottom: 5px;
				border-bottom: 1px solid $grey-border-color;

				&:target::before { /* anchor margin on top */
					content: "";
					display: block;
					margin-top: -100px;
					height: 100px;
				}
			}

			& > h3 {
				font-size: 1.3em;
				margin-top: 1.5em;
				margin-bottom: 0.5em;
				margin-left: 0;
				text-align: left;
			}

			p {
				margin-top: 5px;
			}

			img {
				max-width: 100%;
			}
		}

		/** HIGHLIGHTS **/
		div.panel {
			border: 1px solid $grey-border-color;
			border-radius: 6px;
			padding: 0px 20px;
			margin: 10px 0px;

			&.with-body {
				padding: 0px;

				& > div.panel-header {
					margin-left: 0px
				}
			}


			&.info, &.warning {
				background-color: $light-blue-background-color;
			}

			& > div.panel-header {
				background-color: $grey-border-color;
				margin: 0px;
				padding: 5px 10px;
				display: inline-block;
				font-size: 1em;
				margin-left: -20px;

				& > i {
					font-weight: 800;
					margin-right: 10px;
				}
			}

			& > div.panel-body {
				margin: 20px;
			}
		}

		table {
			border-collapse: collapse;

			thead {
				background-color: $light-grey-background-color;
			}

			td, th {
				border: 1px solid $grey-border-color;
				padding: 5px 10px;
			}

			td {
				font-size: 0.9em;
			}
		}
	}
}

/**
 *
 * MOBILE
 *
 **/

@media only screen and (max-width: 1000px) {
	section.resources-section > div {
		margin-left: auto;
		flex-direction: column;

		& > aside {
			width: 100%;
			position: relative;
			top: 0px;
		}

		table, tr, tbody, td {
			display: block;
		}

		table {

			thead {
				display: none;
			}

			&.header-small-mobile {
				td {
					margin-left: 100px;

					&:before {
						left: -90px;
						width: 80px;
					}
				}
			}

			tr {
				margin-bottom: 1em;
				border: 1px solid $grey-border-color;
				background-color: $light-grey-background-color;

				td {
					position: relative;
					margin-left: 140px;
					border: 0px solid transparent;
					padding-left: 0px;
					border-bottom: 1px solid $grey-border-color;
					min-height: calc(1em + 10px); /* to deal with empty cells */


					&:before {
						position: absolute;
						width: 130px;
						left: -140px;
						top: 0px;
						bottom: -1px;
						content: attr(data-label);
						padding-left: 10px;
						padding-top: 5px;
						padding-bottom: 5px;
						font-weight: 800;
						border-bottom: 1px solid $grey-border-color;
					}

					&:last-child {
						border-bottom: 0px solid transparent;
						
						&:before {
							border-bottom: 0px solid transparent;
						}
					}
				}
			}
		}
	}
}

table#signing-file-elements tr td code {
	word-break: normal;
}

p > code {
	word-break: normal;
}

